--- a/EnhanceQuizStarter/Base.lproj/Main.storyboard
+++ b/EnhanceQuizStarter/Base.lproj/Main.storyboard
@@ -114,7 +114,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vzx-mG-C1o">
-                                <rect key="frame" x="79" y="320" width="256" height="256"/>
+                                <rect key="frame" x="157" y="398" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Wp5-DW-ZOD"/>
+                                    <constraint firstAttribute="height" constant="100" id="Z9a-MU-knc"/>
+                                </constraints>
                                 <state key="normal" image="play-button"/>
                                 <state key="highlighted" image="play-button_selected"/>
                                 <connections>
@@ -122,16 +126,16 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="64Q-Wr-5NF" userLabel="Timer">
-                                <rect key="frame" x="20" y="596" width="374" height="31"/>
+                                <rect key="frame" x="113.00000000000001" y="538" width="188.33333333333337" height="31"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URt-8K-Ixo">
-                                        <rect key="frame" x="0.0" y="0.0" width="305" height="31"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lightning Mode" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URt-8K-Ixo">
+                                        <rect key="frame" x="0.0" y="0.0" width="119.33333333333333" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="a2l-61-Dyd">
-                                        <rect key="frame" x="325" y="0.0" width="51" height="31"/>
+                                        <rect key="frame" x="139.33333333333334" y="0.0" width="51" height="31"/>
                                         <color key="onTintColor" red="0.93725490199999995" green="0.47450980390000003" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </switch>
                                 </subviews>
@@ -140,8 +144,6 @@
                         <color key="backgroundColor" red="0.12941176470588234" green="0.14117647058823529" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dCF-BL-dDa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7V9-LV-Ifk"/>
-                            <constraint firstItem="64Q-Wr-5NF" firstAttribute="top" secondItem="Vzx-mG-C1o" secondAttribute="bottom" constant="20" id="CdZ-0j-lFT"/>
-                            <constraint firstItem="64Q-Wr-5NF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="FX7-Fl-c0p"/>
                             <constraint firstItem="flq-Lw-96e" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HNg-mh-Mkl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w1Q-1C-ga6" secondAttribute="trailing" constant="20" id="Lw8-oc-1ws"/>
                             <constraint firstItem="eic-Nx-foS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="O7J-hj-aZm"/>
@@ -154,6 +156,7 @@
                             <constraint firstItem="w1Q-1C-ga6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="dnd-4H-8dj"/>
                             <constraint firstItem="dCF-BL-dDa" firstAttribute="top" secondItem="cKO-PZ-c9o" secondAttribute="bottom" constant="20" id="du1-v3-ujc"/>
                             <constraint firstItem="Vzx-mG-C1o" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eg4-hs-FDC"/>
+                            <constraint firstItem="64Q-Wr-5NF" firstAttribute="top" secondItem="Vzx-mG-C1o" secondAttribute="bottom" constant="40" id="gQO-y5-F8I"/>
                             <constraint firstItem="cKO-PZ-c9o" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="gS2-ws-V8A"/>
                             <constraint firstItem="Vzx-mG-C1o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jRg-hT-Gnp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cKO-PZ-c9o" secondAttribute="trailing" constant="20" id="mLn-gv-7h8"/>
